[FIX] web_dashboard: Avoid buttons to touch each others
The 'Measures' and 'Groupby' buttons tend to be misaligned and glued
together.

This commit fixes the bad vertical alignment and the missing space
between the buttons.

--- a/web_dashboard/static/src/scss/dashboard_view.scss
+++ b/web_dashboard/static/src/scss/dashboard_view.scss
@@ -228,6 +228,12 @@
         > .btn-group[role=toolbar] {
             margin-left: 8px;
         }
+
+        .o_dropdown {
+            margin-left: 8px;
+            display: flex;
+            align-items: center;
+        }
     }
 
     .o_subview {
